Certificate SSH feature working
Certificate SSH feature working

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -2,13 +2,11 @@ FROM python:3.8
 # set env for python
 ENV PYTHONUNBUFFERED 1
 # create dir for ssh keys
-RUN mkdir -p /home/user/.ssh
+RUN mkdir -p /root/.ssh
 # copy ssh private key
-COPY /keys/id_rsa /home/user/.ssh/
+COPY /keys/id_rsa /root/.ssh/
 # copy ssh public key
-COPY /keys/id_rsa.pub /home/user/.ssh/
-# change permisions for files
-RUN chmod -R 755 /home/user/.ssh
+COPY /keys/id_rsa.pub /root/.ssh/
 # Create app directory
 RUN mkdir -p /app
 # change default dir
