change container name
Update docker-compose.yml change container name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
             - ./app/:/app/
         restart: always
         tty: true
-        image: test_ssh:latest
+        image: collector_ssh:latest
